# ChangeLog for sci-geosciences/openstreetmap-icons
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/openstreetmap-icons/ChangeLog,v 1.3 2009/06/25 20:20:57 tupone Exp $

  25 Jun 2009; Tupone Alfredo <tupone@gentoo.org>
  openstreetmap-icons-20090616.ebuild:
  Fix missing File/Slurp. Bug #275367 by Kevin Woldt

  22 Jun 2009; Alfredo Tupone <tupone@gentoo.org>
  openstreetmap-icons-20090616.ebuild:
  Rebuild icons and geoinfo db.

*openstreetmap-icons-20090616 (20 Jun 2009)

  20 Jun 2009; Tupone Alfredo <tupone@gentoo.org> +metadata.xml,
  +openstreetmap-icons-20090616.ebuild:
  Icons from openstreetmap
