@@ -1,4 +1,4 @@
 DIST openstreetmap-icons-20090616.tar.bz2 2207156 RMD160 5a7ad79db1d0ca326cd51119a06361540bd9cfc7 SHA1 706a7881f274969baf4c3bf9212daf8c9c3fb686 SHA256 e1397d7ecb04335eaaa6160f61d84078840a3e13eeaa3de090fe26de8e09f3ff
-EBUILD openstreetmap-icons-20090616.ebuild 1068 RMD160 164285ae249654298c9c423161469fcf48deaecf SHA1 7605666b59145ee4b68e30a7709aca9f38817c1f SHA256 a00ac23b086a16ab017be4800b4fe3a09e8d7f8cea553614859bb0bbbcf89a5b
-MISC ChangeLog 686 RMD160 17e1bbde0a35e23adb3701b2078049fea90cd97c SHA1 cf281fbfea26fccd1901228ab4573b151fbbe2a0 SHA256 3088249e995d003aee4004c700a67dcd1aa1e2719ac492793b8d973bb65669cb
+EBUILD openstreetmap-icons-20090616.ebuild 1089 RMD160 484c30e9dc54a2f2b0a1d5fa1f0907eba7295fbe SHA1 939f4b8f881f3b4a968403ad04dcec0b28b2180b SHA256 72358ceadcaa50c1698dad97848d95ee6d94a09f177e606056e2f89d3c3d2943
+MISC ChangeLog 852 RMD160 5e4bfa873dda84f627a458d411ef2ce14bfd23a0 SHA1 c75ecb5561feaf983c0d0d238ab60217aa3764cd SHA256 8c2d651946864a12a8c146b61afb68d2a985a0ec8ffeeea3c04b710ad47801cd
 MISC metadata.xml 328 RMD160 adf0588ea8641b51c6b9ee17491bdb0f9695ae12 SHA1 3fd8c69098a42e95fc226d3ad536bb4055fa46a4 SHA256 e7c7bf7d172251192430b7435291c86d294819f7b48af5fb3e5e880eac08331b
