@@ -1,6 +1,10 @@
 # ChangeLog for sci-geosciences/openstreetmap-icons
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/openstreetmap-icons/ChangeLog,v 1.3 2009/06/25 20:20:57 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/openstreetmap-icons/ChangeLog,v 1.4 2009/06/30 06:58:50 tupone Exp $
+
+  30 Jun 2009; Alfredo Tupone <tupone@gentoo.org>
+  openstreetmap-icons-20090616.ebuild:
+  Fix missing dev-perl/DBD-SQLite requirement. Bug #275805 by Peter Gantner
 
   25 Jun 2009; Tupone Alfredo <tupone@gentoo.org>
   openstreetmap-icons-20090616.ebuild:
